--- a/web/sites/mobile-live-dealer/config/sync/language.entity.bd.yml
+++ b/web/sites/mobile-live-dealer/config/sync/language.entity.bd.yml
@@ -1,7 +1,13 @@
 uuid: 0fc3c5f9-08ea-4048-9550-5ff98c535858
-langcode: en
+langcode: bd
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - webcomposer_language_hierarchy
+third_party_settings:
+  webcomposer_language_hierarchy:
+    webcomposer_fallback_langcode: en
+    webcomposer_language_hidden: 0
 id: bd
 label: 'Bengali (Bangladesh)'
 direction: ltr
