--- a/web/sites/mobile-entrypage/config/sync/user.role.anonymous.yml
+++ b/web/sites/mobile-entrypage/config/sync/user.role.anonymous.yml
@@ -11,6 +11,8 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access language bd'
+  - 'access language bg'
   - 'access language bn'
   - 'access language bu'
   - 'access language el'
