WEBSITE-2119-Bangladesh-Bengali-and-Indian-Bengali-languages

--- a/web/sites/mobile-games/config/sync/user.role.anonymous.yml
+++ b/web/sites/mobile-games/config/sync/user.role.anonymous.yml
@@ -11,6 +11,8 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access language bd'
+  - 'access language bg'
   - 'access language bu'
   - 'access language en'
   - 'access language es'
