--- a/web/sites/registration/config/sync/language.entity.bd.yml
+++ b/web/sites/registration/config/sync/language.entity.bd.yml
@@ -9,7 +9,7 @@ third_party_settings:
     webcomposer_fallback_langcode: en
     webcomposer_language_hidden: 0
 id: bd
-label: 'Bangladesh Bengali'
+label: 'Bengali (Bangladesh)'
 direction: ltr
 weight: 10
 locked: false
