--- a/web/sites/registration/config/sync/language.entity.bg.yml
+++ b/web/sites/registration/config/sync/language.entity.bg.yml
@@ -9,7 +9,7 @@ third_party_settings:
     webcomposer_fallback_langcode: en
     webcomposer_language_hidden: 0
 id: bg
-label: India(Bengali)
+label: Bengali(India)
 direction: ltr
 weight: 9
 locked: false
