--- a/web/sites/mobile-games/config/sync/core.entity_form_display.node.games.default.yml
+++ b/web/sites/mobile-games/config/sync/core.entity_form_display.node.games.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.games.field_all_games_category_ribbon
     - field.field.node.games.field_disable_game_loader
+    - field.field.node.games.field_external_game_id
     - field.field.node.games.field_game_code
     - field.field.node.games.field_game_filter
     - field.field.node.games.field_game_platform
@@ -31,7 +32,7 @@ third_party_settings:
       children:
         - field_game_filter
       parent_name: ''
-      weight: 24
+      weight: 25
       format_type: details
       format_settings:
         id: ''
@@ -46,22 +47,30 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   field_all_games_category_ribbon:
-    weight: 21
+    weight: 22
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_disable_game_loader:
-    weight: 26
+    weight: 27
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
+    region: content
+  field_external_game_id:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_game_code:
     weight: 1
@@ -78,31 +87,31 @@ content:
     type: options_buttons
     region: content
   field_game_platform:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_provider:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_ribbon:
-    weight: 20
+    weight: 21
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_games_list_category:
-    weight: 16
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
   field_games_list_thumb_img_big:
-    weight: 19
+    weight: 20
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -110,7 +119,7 @@ content:
     type: image_image
     region: content
   field_games_list_thumb_img_small:
-    weight: 18
+    weight: 19
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -118,25 +127,25 @@ content:
     type: image_image
     region: content
   field_games_list_thumbnail_size:
-    weight: 17
+    weight: 18
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_games_subprovider:
     type: options_select
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_games_target:
-    weight: 23
+    weight: 24
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_keywords:
-    weight: 22
+    weight: 23
     settings:
       rows: 2
       placeholder: ''
@@ -144,7 +153,7 @@ content:
     type: string_textarea
     region: content
   field_preview_mode:
-    weight: 25
+    weight: 26
     settings:
       display_label: true
     third_party_settings: {  }
@@ -152,14 +161,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 5
+    weight: 6
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -167,17 +176,17 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 10
     region: content
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -185,14 +194,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 16
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 10
+    weight: 11
     region: content
     third_party_settings: {  }
   title:
@@ -204,13 +213,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -219,7 +228,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 14
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
