--- a/web/sites/mobile-games/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/mobile-games/config/sync/core.entity_view_display.node.games.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.games.field_all_games_category_ribbon
     - field.field.node.games.field_disable_game_loader
+    - field.field.node.games.field_external_game_id
     - field.field.node.games.field_game_code
     - field.field.node.games.field_game_filter
     - field.field.node.games.field_game_platform
@@ -45,6 +46,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_external_game_id:
+    weight: 14
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_code:
     weight: 5
