--- a/web/sites/zipang-casino/config/sync/core.extension.yml
+++ b/web/sites/zipang-casino/config/sync/core.extension.yml
@@ -18,9 +18,9 @@ module:
   contact: 0
   contact_storage: 0
   contact_us_config: 0
-  promotions_page_config: 0
   content_translation: 0
   contextual: 0
+  csv_serialization: 0
   ctools: 0
   datetime: 0
   deposit_and_withdrawal: 0
@@ -30,6 +30,7 @@ module:
   entity_reference_revisions: 0
   entity_reference_views_select: 0
   entityqueue: 0
+  feeds: 0
   field: 0
   field_group: 0
   field_ui: 0
@@ -66,6 +67,7 @@ module:
   token: 0
   toolbar: 0
   user: 0
+  views_data_export: 0
   views_ui: 0
   webcomposer_affilates: 0
   webcomposer_announcements: 0
