--- a/web/sites/zipang-casino/config/sync/field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_external_game_id.yml
+++ b/web/sites/zipang-casino/config/sync/field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_external_game_id.yml
@@ -13,7 +13,7 @@ bundle: zipang_desktop_games_entity
 label: 'External Game ID'
 description: 'External Game ID for POST Method PlayerGame'
 required: true
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
