--- a/web/sites/casino/config/sync/user.role.anonymous.yml
+++ b/web/sites/casino/config/sync/user.role.anonymous.yml
@@ -11,6 +11,7 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access language bg'
   - 'access language bu'
   - 'access language en'
   - 'access language es'
@@ -21,7 +22,6 @@ permissions:
   - 'access language hi'
   - 'access language id'
   - 'access language in'
-  - 'access language ja'
   - 'access language km'
   - 'access language ko'
   - 'access language lo'
