WEBSITE-2036 Added new languages BD & BG

--- a/web/sites/entrypage/config/sync/user.role.anonymous.yml
+++ b/web/sites/entrypage/config/sync/user.role.anonymous.yml
@@ -13,6 +13,8 @@ permissions:
   - 'access content'
   - 'access language bn'
   - 'access language bu'
+  - 'access language bd'
+  - 'access language bg'
   - 'access language el'
   - 'access language en'
   - 'access language es'
