--- a/web/sites/dafa-sports/config/sync/user.role.anonymous.yml
+++ b/web/sites/dafa-sports/config/sync/user.role.anonymous.yml
@@ -36,6 +36,8 @@ permissions:
   - 'access language km'
   - 'access language bn'
   - 'access language pk'
+  - 'access language bg'
+  - 'access language bd'
   - 'access site-wide contact form'
   - 'administer rest resources'
   - 'restful get affiliate_rest_resource'
