WEBSITE-2116: added new language bg and bd keno.

--- a/web/sites/keno/config/sync/user.role.anonymous.yml
+++ b/web/sites/keno/config/sync/user.role.anonymous.yml
@@ -22,6 +22,8 @@ permissions:
   - 'access language te'
   - 'access language th'
   - 'access language vi'
+  - 'access language bd'
+  - 'access language bg'
   - 'access language zh-hans'
   - 'access site-wide contact form'
   - 'administer rest resources'
