WEBSITE-1783-Bangladesh-Bengali-and-Indian-Bengali-languages

--- a/web/sites/account/config/sync/user.role.config_admin.yml
+++ b/web/sites/account/config/sync/user.role.config_admin.yml
@@ -8,11 +8,38 @@ weight: 3
 is_admin: null
 permissions:
   - 'access administration pages'
+  - 'access language bg'
+  - 'access language bd'
+  - 'access language el'
+  - 'access language en'
+  - 'access language es'
+  - 'access language eu'
+  - 'access language hi'
+  - 'access language id'
+  - 'access language in'
+  - 'access language ja'
+  - 'access language km'
+  - 'access language ko'
+  - 'access language lo'
+  - 'access language my'
+  - 'access language pl'
+  - 'access language pt-br'
+  - 'access language te'
+  - 'access language th'
+  - 'access language vi'
+  - 'access language zh-hans'
+  - 'access language zh-hant'
+  - 'access marketing script overview'
   - 'access site in maintenance mode'
   - 'access toolbar'
   - 'access user profiles'
+  - 'add marketing script entities'
   - 'administer content translation'
   - 'administer languages'
+  - 'administer marketing script entities'
+  - 'administer marketing_script_entity display'
+  - 'administer marketing_script_entity fields'
+  - 'administer marketing_script_entity form display'
   - 'administer menu'
   - 'administer my_account change password form'
   - 'administer my_account core'
@@ -28,6 +55,10 @@ permissions:
   - 'administer user display'
   - 'administer user fields'
   - 'administer user form display'
+  - 'administer wbc domain export'
+  - 'administer wbc domain import'
+  - 'administer wbc domain toggle'
+  - 'administer wbc domains'
   - 'change own username'
   - 'create content translations'
   - 'customize shortcut links'
@@ -39,6 +70,7 @@ permissions:
   - 'delete terms in product_tabs'
   - 'delete terms in products'
   - 'delete terms in tags'
+  - 'edit marketing script entities'
   - 'edit terms in domain'
   - 'edit terms in domain_groups'
   - 'edit terms in history_table_header'
@@ -54,11 +86,15 @@ permissions:
   - 'translate domain_groups taxonomy_term'
   - 'translate history_table_header taxonomy_term'
   - 'translate interface'
+  - 'translate marketing_script_entity'
   - 'translate master_placeholder taxonomy_term'
   - 'translate menu_link_content'
   - 'translate paragraph'
   - 'translate product_tabs taxonomy_term'
   - 'translate products taxonomy_term'
   - 'update content translations'
+  - 'use menu link attributes'
   - 'use text format full_html'
+  - 'view published marketing script entities'
   - 'view the administration theme'
+  - 'view unpublished marketing script entities'
