--- a/web/sites/mobile-arcade/config/sync/core.entity_form_display.node.games.default.yml
+++ b/web/sites/mobile-arcade/config/sync/core.entity_form_display.node.games.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.games.field_all_games_category_ribbon
     - field.field.node.games.field_disable_game_loader
+    - field.field.node.games.field_external_game_id
     - field.field.node.games.field_game_code
     - field.field.node.games.field_game_filter
     - field.field.node.games.field_game_provider
@@ -28,7 +29,7 @@ third_party_settings:
       children:
         - field_games_list_category
       parent_name: ''
-      weight: 14
+      weight: 15
       format_type: details
       format_settings:
         label: 'Game Categories'
@@ -42,7 +43,7 @@ third_party_settings:
         - field_game_ribbon
         - field_all_games_category_ribbon
       parent_name: ''
-      weight: 17
+      weight: 18
       format_type: details
       format_settings:
         id: ''
@@ -55,7 +56,7 @@ third_party_settings:
         - field_keywords
         - field_game_filter
       parent_name: ''
-      weight: 18
+      weight: 19
       format_type: details
       format_settings:
         id: ''
@@ -70,7 +71,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -87,6 +88,14 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_external_game_id:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_code:
     weight: 2
     settings:
@@ -96,13 +105,13 @@ content:
     type: string_textfield
     region: content
   field_game_filter:
-    weight: 20
+    weight: 28
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
   field_game_provider:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -120,19 +129,19 @@ content:
     type: options_buttons
     region: content
   field_games_subprovider:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_games_target:
-    weight: 16
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_games_thumbnail_image:
-    weight: 15
+    weight: 16
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -140,7 +149,7 @@ content:
     type: image_image
     region: content
   field_keywords:
-    weight: 19
+    weight: 27
     settings:
       rows: 5
       placeholder: ''
@@ -163,7 +172,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -171,12 +180,12 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     region: content
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -189,14 +198,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 13
+    weight: 14
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 10
     region: content
     third_party_settings: {  }
   title:
@@ -208,13 +217,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -223,7 +232,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
