--- a/web/sites/casino/config/sync/user.role.anonymous.yml
+++ b/web/sites/casino/config/sync/user.role.anonymous.yml
@@ -22,6 +22,7 @@ permissions:
   - 'access language hi'
   - 'access language id'
   - 'access language in'
+  - 'access language ja'
   - 'access language km'
   - 'access language ko'
   - 'access language lo'
