--- a/web/sites/games/config/sync/core.entity_form_display.node.arcade_game.default.yml
+++ b/web/sites/games/config/sync/core.entity_form_display.node.arcade_game.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.arcade_game.field_arc_game_title
     - field.field.node.arcade_game.field_arc_meta_tags
     - field.field.node.arcade_game.field_arcade_category
+    - field.field.node.arcade_game.field_external_game_id
     - field.field.node.arcade_game.field_game_integration_params
     - field.field.node.arcade_game.field_game_subprovider
     - field.field.node.arcade_game.field_game_thumbnail_image_h
@@ -36,6 +37,7 @@ third_party_settings:
       children:
         - field_arc_game_provider
         - field_arc_game_code
+        - field_external_game_id
         - field_game_subprovider
         - field_game_integration_params
       parent_name: ''
@@ -72,7 +74,7 @@ third_party_settings:
         - field_um_start
         - field_um_end
       parent_name: ''
-      weight: 13
+      weight: 14
       format_type: tab
       format_settings:
         id: ''
@@ -95,7 +97,7 @@ content:
     type: string_textfield
     region: content
   field_arc_game_keywords:
-    weight: 12
+    weight: 13
     settings:
       size: 100
       placeholder: 'e.g., slots, top, live'
@@ -142,8 +144,16 @@ content:
     third_party_settings: {  }
     type: options_buttons
     region: content
+  field_external_game_id:
+    weight: 12
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_integration_params:
-    weight: 13
+    weight: 14
     settings:
       rows: 5
       placeholder: ''
@@ -152,7 +162,7 @@ content:
     type: string_textarea
     region: content
   field_game_subprovider:
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: options_select
