--- a/web/sites/games/config/sync/core.entity_form_display.node.games_2_0.default.yml
+++ b/web/sites/games/config/sync/core.entity_form_display.node.games_2_0.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.games_2_0.field_external_game_id
     - field.field.node.games_2_0.field_game_integration_params
     - field.field.node.games_2_0.field_game_subprovider
     - field.field.node.games_2_0.field_preview_display_only
@@ -55,6 +56,7 @@ third_party_settings:
         - field_v2_play_for_fun_toggle
         - field_v2_game_provider
         - field_v2_game_code
+        - field_external_game_id
         - field_game_subprovider
         - field_game_integration_params
       parent_name: ''
@@ -101,7 +103,7 @@ third_party_settings:
         - field_um_start
         - field_um_end
       parent_name: ''
-      weight: 20
+      weight: 17
       format_type: tab
       format_settings:
         id: ''
@@ -115,8 +117,16 @@ targetEntityType: node
 bundle: games_2_0
 mode: default
 content:
+  field_external_game_id:
+    weight: 13
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_integration_params:
-    weight: 14
+    weight: 15
     settings:
       rows: 5
       placeholder: ''
@@ -125,13 +135,13 @@ content:
     type: string_textarea
     region: content
   field_game_subprovider:
-    weight: 13
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_preview_display_only:
-    weight: 15
+    weight: 16
     settings:
       display_label: true
     third_party_settings: {  }
@@ -207,7 +217,7 @@ content:
     type: boolean_checkbox
     region: content
   field_v2_game_keywords:
-    weight: 16
+    weight: 17
     settings:
       rows: 5
       placeholder: ''
