--- a/web/sites/games/config/sync/core.entity_view_display.node.arcade_game.default.yml
+++ b/web/sites/games/config/sync/core.entity_view_display.node.arcade_game.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.arcade_game.field_arc_game_title
     - field.field.node.arcade_game.field_arc_meta_tags
     - field.field.node.arcade_game.field_arcade_category
+    - field.field.node.arcade_game.field_external_game_id
     - field.field.node.arcade_game.field_game_integration_params
     - field.field.node.arcade_game.field_game_subprovider
     - field.field.node.arcade_game.field_game_thumbnail_image_h
@@ -103,6 +104,14 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_external_game_id:
+    weight: 120
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_integration_params:
     weight: 119
