--- a/web/sites/games/config/sync/core.entity_view_display.node.games_2_0.default.yml
+++ b/web/sites/games/config/sync/core.entity_view_display.node.games_2_0.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.games_2_0.field_external_game_id
     - field.field.node.games_2_0.field_game_integration_params
     - field.field.node.games_2_0.field_game_subprovider
     - field.field.node.games_2_0.field_preview_display_only
@@ -36,6 +37,14 @@ targetEntityType: node
 bundle: games_2_0
 mode: default
 content:
+  field_external_game_id:
+    weight: 123
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_game_integration_params:
     weight: 122
     label: above
