--- a/web/sites/games/config/sync/core.extension.yml
+++ b/web/sites/games/config/sync/core.extension.yml
@@ -22,6 +22,7 @@ module:
   contact_storage: 0
   content_translation: 0
   contextual: 0
+  csv_serialization: 0
   ctools: 0
   datetime: 0
   devel: 0
@@ -31,6 +32,7 @@ module:
   entity_reference_revisions: 0
   entity_reference_views_select: 0
   entityqueue: 0
+  feeds: 0
   field: 0
   field_group: 0
   field_ui: 0
@@ -83,6 +85,7 @@ module:
   token: 0
   toolbar: 0
   user: 0
+  views_data_export: 0
   views_ui: 0
   webcomposer_affilates: 0
   webcomposer_announcements: 0
