--- a/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_client_type
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_enable_free_play
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_enable_game
+    - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_external_game_id
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_category
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_code
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_code_icore
@@ -84,6 +85,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_external_game_id:
+    weight: 22
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_category:
     weight: 14
