--- a/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
@@ -3,6 +3,7 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.feeds_item
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_all_games_category
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_arcade_game_category
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_arcade_game_filter
@@ -44,7 +45,7 @@ content:
     type: entity_reference_label
     region: content
   field_arcade_game_category:
-    weight: 16
+    weight: 14
     label: above
     settings:
       link: true
@@ -52,7 +53,7 @@ content:
     type: entity_reference_label
     region: content
   field_arcade_game_filter:
-    weight: 17
+    weight: 16
     label: above
     settings:
       link: true
@@ -60,7 +61,7 @@ content:
     type: entity_reference_label
     region: content
   field_client_type:
-    weight: 9
+    weight: 8
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -87,15 +88,15 @@ content:
     type: boolean
     region: content
   field_external_game_id:
+    type: string
     weight: 22
+    region: content
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
   field_game_category:
-    weight: 14
+    weight: 11
     label: above
     settings:
       link: true
@@ -103,7 +104,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_code:
-    weight: 7
+    weight: 6
     label: above
     settings:
       link_to_entity: false
@@ -111,7 +112,7 @@ content:
     type: string
     region: content
   field_game_code_icore:
-    weight: 10
+    weight: 9
     label: above
     settings:
       link_to_entity: false
@@ -119,14 +120,14 @@ content:
     type: string
     region: content
   field_game_description:
-    weight: 15
+    weight: 12
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_game_filter:
-    weight: 17
+    weight: 15
     label: above
     settings:
       link: true
@@ -134,7 +135,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_filter_games:
-    weight: 16
+    weight: 13
     label: above
     settings:
       link: true
@@ -150,7 +151,7 @@ content:
     type: string
     region: content
   field_game_provider:
-    weight: 11
+    weight: 10
     label: above
     settings:
       link: true
@@ -158,7 +159,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_tag:
-    weight: 5
+    weight: 4
     label: above
     settings:
       link: true
@@ -166,7 +167,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_thumbnail:
-    weight: 6
+    weight: 5
     label: above
     settings:
       image_style: ''
@@ -175,7 +176,7 @@ content:
     type: image
     region: content
   field_game_title:
-    weight: 8
+    weight: 7
     label: above
     settings:
       link_to_entity: false
@@ -183,7 +184,7 @@ content:
     type: string
     region: content
   field_game_title_icon:
-    weight: 19
+    weight: 18
     label: above
     settings:
       image_style: ''
@@ -192,7 +193,7 @@ content:
     type: image
     region: content
   field_game_type:
-    weight: 18
+    weight: 17
     label: above
     settings:
       link: true
@@ -223,4 +224,5 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  feeds_item: true
   langcode: true
