WEBSITE-2146 Added External Game ID field for Mobile&Desktop

--- a/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
@@ -3,12 +3,14 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.feeds_item
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_all_games_category
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_arcade_game_category
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_arcade_game_filter
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_client_type
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_enable_free_play
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_enable_game
+    - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_external_game_id
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_category
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_code
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_code_icore
@@ -74,6 +76,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_external_game_id:
+    weight: 21
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_category:
     weight: 3
@@ -197,5 +207,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  feeds_item: true
   field_all_games_category: true
   langcode: true
