--- a/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
@@ -3,12 +3,14 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.feeds_item
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_all_games_category
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_arcade_game_category
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_arcade_game_filter
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_free_play
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_external_game_id
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_category
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_code
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_code_icore
@@ -36,7 +38,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 13
+      weight: 14
       format_type: fieldset
       format_settings:
         label: 'Casino (for casino page)'
@@ -49,7 +51,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 14
+      weight: 15
       format_type: fieldset
       format_settings:
         label: 'Games (for games page)'
@@ -63,7 +65,7 @@ third_party_settings:
         - field_arcade_game_category
         - field_arcade_game_filter
       parent_name: ''
-      weight: 16
+      weight: 17
       format_type: fieldset
       format_settings:
         label: 'Arcade (for arcade page)'
@@ -77,7 +79,7 @@ third_party_settings:
         - field_game_title_icon
         - field_game_icon_label
       parent_name: ''
-      weight: 17
+      weight: 18
       format_type: fieldset
       format_settings:
         id: ''
@@ -91,7 +93,7 @@ bundle: jamboree_desktop_games_entity
 mode: default
 content:
   field_all_games_category:
-    weight: 15
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -109,13 +111,13 @@ content:
     type: options_select
     region: content
   field_client_type:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_enable_free_play:
-    weight: 9
+    weight: 10
     settings:
       display_label: true
     third_party_settings: {  }
@@ -127,6 +129,14 @@ content:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
+    region: content
+  field_external_game_id:
+    weight: 7
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_game_category:
     weight: 4
@@ -225,13 +235,13 @@ content:
     type: string_textfield
     region: content
   field_game_provider:
-    weight: 11
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_tag:
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -261,13 +271,13 @@ content:
     type: image_image
     region: content
   field_game_type:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_provider_product:
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -288,5 +298,6 @@ content:
       placeholder: ''
     third_party_settings: {  }
 hidden:
+  feeds_item: true
   translation: true
   user_id: true
