--- a/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_mobile_games_entity.jamboree_mobile_games_entity.default.yml
@@ -3,12 +3,14 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.feeds_item
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_all_games_category
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_arcade_game_category
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_arcade_game_filter
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_client_type
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_enable_free_play
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_enable_game
+    - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_external_game_id
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_category
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_code
     - field.field.jamboree_mobile_games_entity.jamboree_mobile_games_entity.field_game_code_icore
@@ -36,7 +38,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 12
+      weight: 13
       format_type: fieldset
       format_settings:
         id: ''
@@ -48,7 +50,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 13
+      weight: 14
       format_type: fieldset
       format_settings:
         id: ''
@@ -61,7 +63,7 @@ third_party_settings:
         - field_arcade_game_category
         - field_arcade_game_filter
       parent_name: ''
-      weight: 15
+      weight: 16
       format_type: fieldset
       format_settings:
         id: ''
@@ -74,7 +76,7 @@ third_party_settings:
         - field_game_title_icon
         - field_game_icon_label
       parent_name: ''
-      weight: 16
+      weight: 17
       format_type: fieldset
       format_settings:
         id: ''
@@ -89,7 +91,7 @@ mode: default
 content:
   field_all_games_category:
     type: options_select
-    weight: 14
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -106,13 +108,13 @@ content:
     type: options_select
     region: content
   field_client_type:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_enable_free_play:
-    weight: 8
+    weight: 9
     settings:
       display_label: true
     third_party_settings: {  }
@@ -124,6 +126,14 @@ content:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
+    region: content
+  field_external_game_id:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_game_category:
     weight: 10
@@ -222,13 +232,13 @@ content:
     type: string_textfield
     region: content
   field_game_provider:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_tag:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -258,13 +268,13 @@ content:
     type: image_image
     region: content
   field_game_type:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_provider_product:
-    weight: 11
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -277,6 +287,7 @@ content:
       include_locked: true
     third_party_settings: {  }
 hidden:
+  feeds_item: true
   name: true
   translation: true
   user_id: true
