--- a/web/sites/mobile-nextbet/config/sync/core.entity_view_display.node.games_slots.default.yml
+++ b/web/sites/mobile-nextbet/config/sync/core.entity_view_display.node.games_slots.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.games_slots.field_all_games_category_ribbon
     - field.field.node.games_slots.field_disable_game_loader
+    - field.field.node.games_slots.field_external_game_id
     - field.field.node.games_slots.field_game_code
     - field.field.node.games_slots.field_game_filter
     - field.field.node.games_slots.field_game_platform
@@ -45,6 +46,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_external_game_id:
+    weight: 117
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_code:
     weight: 105
@@ -152,5 +161,7 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   langcode: true
