--- a/web/sites/mobile-nextbet/config/sync/views.view.game_list_slots_v2.yml
+++ b/web/sites/mobile-nextbet/config/sync/views.view.game_list_slots_v2.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_all_games_category_ribbon
     - field.storage.node.field_disable_game_loader
+    - field.storage.node.field_external_game_id
     - field.storage.node.field_game_code
     - field.storage.node.field_game_filter
     - field.storage.node.field_game_platform
@@ -1159,15 +1160,9 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_export
+          type: entity_reference_label
           settings:
-            view_mode: default
-            extra:
-              id: id
-              title: 0
-              url: 0
-              type: 0
-              bundle: 0
+            link: 0
           group_column: target_id
           group_columns: {  }
           group_rows: 1
@@ -1445,6 +1440,69 @@ display:
           entity_type: node
           entity_field: status
           plugin_id: field
+        field_external_game_id:
+          id: field_external_game_id
+          table: node__field_external_game_id
+          field: field_external_game_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         type:
           id: type
@@ -1540,6 +1598,7 @@ display:
       tags:
         - 'config:field.storage.node.field_all_games_category_ribbon'
         - 'config:field.storage.node.field_disable_game_loader'
+        - 'config:field.storage.node.field_external_game_id'
         - 'config:field.storage.node.field_game_code'
         - 'config:field.storage.node.field_game_filter'
         - 'config:field.storage.node.field_game_platform'
@@ -1645,15 +1704,6 @@ display:
             field_games_list_category_export:
               alias: field_games_list_category
               raw_output: false
-            publish_on:
-              alias: ''
-              raw_output: false
-            unpublish_on:
-              alias: ''
-              raw_output: false
-            status:
-              alias: ''
-              raw_output: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -1665,6 +1715,7 @@ display:
       tags:
         - 'config:field.storage.node.field_all_games_category_ribbon'
         - 'config:field.storage.node.field_disable_game_loader'
+        - 'config:field.storage.node.field_external_game_id'
         - 'config:field.storage.node.field_game_code'
         - 'config:field.storage.node.field_game_filter'
         - 'config:field.storage.node.field_game_platform'
