--- a/web/sites/mobile-nextbet/config/sync/views.view.game_providers_export_arcade.yml
+++ b/web/sites/mobile-nextbet/config/sync/views.view.game_providers_export_arcade.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_external_game_id
     - field.storage.node.field_game_code
     - node.type.games_arcade
     - system.menu.admin
@@ -135,6 +136,69 @@ display:
           group_type: group
           admin_label: ''
           label: 'Game Code'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_external_game_id:
+          id: field_external_game_id
+          table: node__field_external_game_id
+          field: field_external_game_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'External Game ID'
           exclude: false
           alter:
             alter_text: false
@@ -371,6 +435,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_external_game_id'
         - 'config:field.storage.node.field_game_code'
   data_export_1:
     display_plugin: data_export
@@ -415,6 +480,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_external_game_id'
         - 'config:field.storage.node.field_game_code'
   page_1:
     display_plugin: page
@@ -444,4 +510,5 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_external_game_id'
         - 'config:field.storage.node.field_game_code'
