--- a/web/sites/mobile-nextbet/config/sync/core.entity_view_display.node.games_arcade.default.yml
+++ b/web/sites/mobile-nextbet/config/sync/core.entity_view_display.node.games_arcade.default.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.field.node.games_arcade.body
+    - field.field.node.games_arcade.feeds_item
     - field.field.node.games_arcade.field_all_games_category_ribbon
     - field.field.node.games_arcade.field_disable_game_loader
+    - field.field.node.games_arcade.field_external_game_id
     - field.field.node.games_arcade.field_game_code
     - field.field.node.games_arcade.field_game_filter
     - field.field.node.games_arcade.field_game_provider_arcade
@@ -51,6 +53,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_external_game_id:
+    weight: 115
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_code:
     weight: 105
@@ -136,4 +146,5 @@ content:
     weight: 100
     region: content
 hidden:
+  feeds_item: true
   langcode: true
