Add external game id field for live dealer.

--- a/web/sites/mobile-nextbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
+++ b/web/sites/mobile-nextbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.games_live_dealer.field_external_game_id
     - field.field.node.games_live_dealer.field_game_code_live_dealer
     - field.field.node.games_live_dealer.field_game_platform_live_dealer
     - field.field.node.games_live_dealer.field_game_provider_live_dealer
@@ -27,6 +28,7 @@ third_party_settings:
       children:
         - field_provider_logo_ld
         - field_game_code_live_dealer
+        - field_external_game_id
         - field_game_platform_live_dealer
       parent_name: ''
       weight: 8
@@ -64,6 +66,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_external_game_id:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_code_live_dealer:
     type: string_textfield
     weight: 1
@@ -74,7 +84,7 @@ content:
     third_party_settings: {  }
   field_game_platform_live_dealer:
     type: options_select
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -104,7 +114,7 @@ content:
     third_party_settings: {  }
   field_preview_mode_ld:
     type: boolean_checkbox
-    weight: 17
+    weight: 18
     region: content
     settings:
       display_label: true
@@ -133,7 +143,7 @@ content:
     third_party_settings: {  }
   field_use_game_loader_ld:
     type: boolean_checkbox
-    weight: 16
+    weight: 17
     region: content
     settings:
       display_label: true
@@ -147,31 +157,31 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 16
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 18
+    weight: 19
     region: content
     settings:
       display_label: true
@@ -207,7 +217,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 14
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
